# training-artifacts-2021-02-17

./: .gitignore  rust-large-scale.md  send-sync.md
calc-ffi/: build.sh  calc_ffi.h  cbindgen.h  demo.c
calc-ffi/src/: lib.rs
calc/src/: eval.rs  lib.rs  main.rs  parse.rs
calc/tests/: demo_test.rs  demo_test2.rs
durable-file/: Cargo.toml
durable-file/src/: main.rs
file-io/src/: main.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
hello_world/: Cargo.toml
overflow/: Cargo.toml
overflow/src/: main.rs
scratch/: Cargo.toml
scratch/src/: folder_demo.rs  main.rs  workload.rs
scratch/src/folder_demo/: folder_contents.rs
scratch/src/mod_demo/: mod.rs  mod_contents.rs
serde-example/: Cargo.toml
serde-example/src/: main.rs
